@@ -1,7 +1,6 @@
 
 -XX:TieredStopAtLevel=1
 -XX:+UseParallelGC
--Xverify:none
 -XX:+DisableExplicitGC
 --enable-native-access=ALL-UNNAMED
 --add-opens=java.base/java.lang=ALL-UNNAMED
